--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,33 @@
 asgiref==3.8.1
-dj-database-url==2.3.0
-Django==5.1.4
+beautifulsoup4==4.13.3
+certifi==2025.1.31
+charset-normalizer==3.4.1
+contourpy==1.3.1
+cycler==0.12.1
+dj-database-url==3.0.1
+Django==5.1.5
 django-heroku==0.3.1
+fonttools==4.57.0
 gunicorn==23.0.0
-mysqlclient==2.2.7
+idna==3.10
+kiwisolver==1.4.8
+matplotlib==3.10.1
+next==1.0.1
+numpy==2.2.4
+opencv-contrib-python==4.11.0.86
 packaging==24.2
-pillow==11.2.1
+pillow==11.1.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-decouple==3.8
-pytz==2024.2
-setuptools==75.6.0
+requests==2.32.3
+six==1.17.0
+soupsieve==2.6
 sqlparse==0.5.3
-typing_extensions==4.12.2
-tzdata==2024.2
-whitenoise==6.8.2
+tailwindcss==0.0.1
+typing_extensions==4.13.1
+tzdata==2025.1
+urllib3==2.3.0
+whitenoise==6.10.0
